// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calling CubeClient functions [Function getCampaignEventsOrdersPerformanceData] should call load 1`] = `
{
  "query": [
    {
      "dimensions": [
        "CampaignOrderEvents.campaignId",
      ],
      "filters": [
        {
          "member": "CampaignOrderEvents.createdDatetime",
          "operator": "inDateRange",
          "values": [
            "2023-01-01T00:00:00-08:00",
            "2023-03-15T23:59:59-07:00",
          ],
        },
        {
          "member": "CampaignOrderEvents.campaignId",
          "operator": "equals",
          "values": [
            "1",
            "2",
          ],
        },
      ],
      "limit": 100,
      "measures": [
        "CampaignOrderEvents.engagement",
      ],
    },
  ],
}
`;

exports[`Calling CubeClient functions [Function getCampaignEventsPerformanceData] should call load 1`] = `
{
  "query": [
    {
      "dimensions": [
        "CampaignEvents.campaignId",
      ],
      "filters": [
        {
          "member": "CampaignEvents.createdDatetime",
          "operator": "inDateRange",
          "values": [
            "2023-01-01T00:00:00-08:00",
            "2023-03-15T23:59:59-07:00",
          ],
        },
        {
          "member": "CampaignEvents.campaignId",
          "operator": "equals",
          "values": [
            "1",
            "2",
          ],
        },
      ],
      "limit": 100,
      "measures": [
        "CampaignEvents.impressions",
        "CampaignEvents.uniqueImpressions",
        "CampaignEvents.firstCampaignDisplay",
        "CampaignEvents.lastCampaignDisplay",
        "CampaignEvents.clicks",
        "CampaignEvents.clicksRate",
      ],
      "segments": [
        "CampaignEvents.campaignEventsOnly",
      ],
    },
  ],
}
`;

exports[`Calling CubeClient functions [Function getCampaignEventsTotalsData] should call load 1`] = `
{
  "query": [
    {
      "dimensions": [],
      "filters": [
        {
          "member": "CampaignOrderEvents.createdDatetime",
          "operator": "inDateRange",
          "values": [
            "2023-01-01T00:00:00-08:00",
            "2023-03-15T23:59:59-07:00",
          ],
        },
        {
          "member": "CampaignOrderEvents.campaignId",
          "operator": "equals",
          "values": [
            "1",
            "2",
          ],
        },
        {
          "member": "CampaignOrderEvents.shopName",
          "operator": "equals",
          "values": [
            "punched-tires-shop",
          ],
        },
      ],
      "measures": [
        "CampaignOrderEvents.impressions",
        "CampaignOrderEvents.engagement",
      ],
    },
  ],
}
`;

exports[`Calling CubeClient functions [Function getCampaignOrderPerformanceData] should call load 1`] = `
{
  "query": [
    {
      "dimensions": [
        "OrderConversion.campaignId",
      ],
      "filters": [
        {
          "member": "OrderConversion.createdDatetime",
          "operator": "inDateRange",
          "values": [
            "2023-01-01T00:00:00-08:00",
            "2023-03-15T23:59:59-07:00",
          ],
        },
        {
          "member": "OrderConversion.campaignId",
          "operator": "equals",
          "values": [
            "1",
            "2",
          ],
        },
      ],
      "limit": 100,
      "measures": [
        "OrderConversion.campaignSales",
        "OrderConversion.ticketSales",
        "OrderConversion.ticketSalesCount",
        "OrderConversion.discountSales",
        "OrderConversion.discountSalesCount",
        "OrderConversion.clickSales",
        "OrderConversion.clickSalesCount",
        "OrderConversion.campaignSalesCount",
      ],
    },
  ],
}
`;

exports[`Calling CubeClient functions [Function getCampaignOrderTotalsData] should call load 1`] = `
{
  "query": [
    {
      "dimensions": [],
      "filters": [
        {
          "member": "OrderConversion.createdDatetime",
          "operator": "inDateRange",
          "values": [
            "2023-01-01T00:00:00-08:00",
            "2023-03-15T23:59:59-07:00",
          ],
        },
        {
          "member": "OrderConversion.campaignId",
          "operator": "equals",
          "values": [
            "1",
            "2",
          ],
        },
        {
          "member": "OrderConversion.shopName",
          "operator": "equals",
          "values": [
            "punched-tires-shop",
          ],
        },
      ],
      "measures": [
        "OrderConversion.influencedRevenueUplift",
        "OrderConversion.campaignSales",
        "OrderConversion.campaignSalesCount",
      ],
    },
  ],
}
`;

exports[`Calling CubeClient functions [Function getCampaignsPerformanceGraphData] should call load 1`] = `
{
  "query": [
    {
      "dimensions": [],
      "filters": [
        {
          "member": "CampaignOrderEvents.createdDatetime",
          "operator": "inDateRange",
          "values": [
            "2023-01-01T00:00:00-08:00",
            "2023-03-15T23:59:59-07:00",
          ],
        },
        {
          "member": "CampaignOrderEvents.campaignId",
          "operator": "equals",
          "values": [
            "1",
            "2",
          ],
        },
        {
          "member": "CampaignOrderEvents.shopName",
          "operator": "equals",
          "values": [
            "punched-tires-shop",
          ],
        },
      ],
      "measures": [
        "CampaignOrderEvents.campaignCTR",
        "CampaignOrderEvents.totalConversionRate",
      ],
      "order": [
        [
          "CampaignOrderEvents.createdDatetime",
          "asc",
        ],
      ],
      "timeDimensions": [
        {
          "dateRange": [
            "2023-01-01T00:00:00-08:00",
            "2023-03-15T23:59:59-07:00",
          ],
          "dimension": "CampaignOrderEvents.createdDatetime",
          "granularity": "day",
        },
      ],
    },
  ],
}
`;

exports[`Calling CubeClient functions [Function getRevenueUpliftGraphData] should call load 1`] = `
{
  "query": [
    {
      "dimensions": [],
      "filters": [
        {
          "member": "OrderConversion.createdDatetime",
          "operator": "inDateRange",
          "values": [
            "2023-01-01T00:00:00-08:00",
            "2023-03-15T23:59:59-07:00",
          ],
        },
        {
          "member": "OrderConversion.campaignId",
          "operator": "equals",
          "values": [
            "1",
            "2",
          ],
        },
        {
          "member": "OrderConversion.shopName",
          "operator": "equals",
          "values": [
            "punched-tires-shop",
          ],
        },
      ],
      "measures": [
        "OrderConversion.influencedRevenueUplift",
      ],
      "order": [
        [
          "OrderConversion.createdDatetime",
          "asc",
        ],
      ],
      "timeDimensions": [
        {
          "dateRange": [
            "2023-01-01T00:00:00-08:00",
            "2023-03-15T23:59:59-07:00",
          ],
          "dimension": "OrderConversion.createdDatetime",
          "granularity": "day",
        },
      ],
    },
  ],
}
`;

exports[`Calling CubeClient functions [Function getStoreRevenueTotalData] should call load 1`] = `
{
  "query": [
    {
      "dimensions": [],
      "filters": [
        {
          "member": "OrderConversion.createdDatetime",
          "operator": "inDateRange",
          "values": [
            "2023-01-01T00:00:00-08:00",
            "2023-03-15T23:59:59-07:00",
          ],
        },
        {
          "member": "OrderConversion.shopName",
          "operator": "equals",
          "values": [
            "punched-tires-shop",
          ],
        },
      ],
      "measures": [
        "OrderConversion.gmv",
      ],
    },
  ],
}
`;

exports[`Calling CubeClient functions [Function getTrafficData] should call load 1`] = `
{
  "query": [
    {
      "dimensions": [],
      "filters": [
        {
          "member": "CampaignEvents.createdDatetime",
          "operator": "inDateRange",
          "values": [
            "2023-01-01T00:00:00-08:00",
            "2023-03-15T23:59:59-07:00",
          ],
        },
        {
          "member": "CampaignEvents.shopName",
          "operator": "equals",
          "values": [
            "punched-tires-shop",
          ],
        },
      ],
      "measures": [
        "CampaignEvents.traffic",
      ],
      "timeDimensions": [
        {
          "dateRange": [
            "2023-01-01T00:00:00-08:00",
            "2023-03-15T23:59:59-07:00",
          ],
          "dimension": "CampaignEvents.createdDatetime",
          "granularity": "day",
        },
      ],
    },
  ],
}
`;
